Fix Mobile Practice page and phantom X scrollbar

--- a/practice.css
+++ b/practice.css
@@ -17,14 +17,17 @@ body {
     width: 100vw;
     margin: 0;
     padding: 0;
-    
+
 
     .final-card {
 
         .flashcard {
             background-color: var(--secondary-900);
-            width: 30rem;
-            height: 20rem;
+            /* max-width: 30rem;
+            max-height: 20rem; */
+            aspect-ratio: 3/2;
+            max-height: 50vh;
+            min-height: 30vh;
 
             font-size: 1rem;
 
@@ -34,17 +37,20 @@ body {
 
             padding: 1.5rem;
 
+            overflow: hidden;
 
             .side {
-                position: fixed;
+                position: absolute;
 
-                width: 30rem;
-                height: 20rem;
-
+                aspect-ratio: 3/2;
+                height: 30vh;
 
                 display: flex;
                 align-items: center;
                 justify-content: center;
+    
+                overflow: hidden;
+
 
                 background-color: var(--secondary-900);
                 border-radius: 1rem;
