--- a/style.css
+++ b/style.css
@@ -61,6 +61,9 @@
     --accent-800: hsl(274, 98%, 20%);
     --accent-900: hsl(274, 96%, 10%);
     --accent-950: hsl(274, 100%, 5%);
+
+    margin: 0;
+    padding: 0;
 }
 
 
@@ -73,8 +76,8 @@ body {
     padding: 0;
     margin: 0;
 
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
 /* Widget styles */
